Sensor de movimiento con LCD

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Tue Sep 13 22:54:39 CST 2022
+#Wed Sep 14 08:13:50 CST 2022
 default.languagetoolchain.version=2.35
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.00\\packs\\Microchip\\PIC16Fxxx_DFP\\1.3.42
 default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=19e4dc0f223322f74cda227c3c12c71c
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.35\\bin
-host.id=1yas-ahmy-14
+host.id=2ba9-fg8e-bx
 configurations-xml=48fc1d77ae858d21e91db4188efaa2ec
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
 user-defined-mime-resolver-xml=none
